// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getAlternateLanguages with article 1`] = `
[
  "nb",
  "nn",
  "en",
]
`;

exports[`getAlternateLanguages without article 1`] = `
[
  "nb",
  "nn",
]
`;
